fix(ffe-form): Increased contrast in focus outline

--- a/packages/ffe-form/less/checkbox.less
+++ b/packages/ffe-form/less/checkbox.less
@@ -97,7 +97,7 @@
 
     &:active + .ffe-checkbox::before,
     &:focus + .ffe-checkbox::before {
-        box-shadow: 0 0 0 2px @ffe-blue-focus;
+        box-shadow: 0 0 0 1px @ffe-white, 0 0 0 4px @ffe-blue-focus;
     }
 
     &:checked + .ffe-checkbox::before {
@@ -106,7 +106,7 @@
     }
 
     &:focus + .ffe-checkbox::before {
-        box-shadow: 0 0 0 2px @ffe-blue-focus;
+        box-shadow: 0 0 0 1px @ffe-white, 0 0 0 4px @ffe-blue-focus;
     }
 
     &:checked + .ffe-checkbox::after {
