--- a/packages/ffe-form/less/radio-switch.less
+++ b/packages/ffe-form/less/radio-switch.less
@@ -62,7 +62,7 @@
     }
 
     &:focus + .ffe-radio-switch {
-        border-color: @ffe-blue-focus;
+        box-shadow: 0 0 0 1px @ffe-white, 0 0 0 4px @ffe-blue-focus;
     }
 
     /* stylelint-disable-next-line selector-max-specificity */
